--- a/catalog.html
+++ b/catalog.html
@@ -14,22 +14,22 @@
       <div class="container">
         <nav class="main-navigation" aria-label="Навигация по сайту">
           <a class="main-logo" href="index.html">
-            <img src="img/main-logo.svg" width="160"  height="65" alt="Логотип дизайн-студии Nerds">
+            <img src="img/main-logo.svg" width="160" height="65" alt="Логотип дизайн-студии Nerds">
           </a>
         <ul class="site-navigation">
           <li><a href="#">Студия</a></li>
           <li><a href="#">Клиенты</a></li>
-          <li><a class="active">Магазин</a></li><!-- Убрала href -->
+          <li><a class="active">Магазин</a></li>
           <li><a href="#">Контакты</a></li>
         </ul>
-
         <a class="cart-link" href="#">Корзина</a>
         </nav>
       </div>
-      <h1 class="page-title">Магазин готовых шаблонов</h1>
     </header>
 
-    <main class="container inner-container">
+    <h1 class="page-title">Магазин готовых шаблонов</h1>
+
+    <main class="container catalog-page">
       <form class="filter" method="get" action="https://echo.htmlacademy.ru">
         <fieldset class="filter-item">
           <legend>Стоимость:</legend>
@@ -42,8 +42,8 @@
               <div class="toggle toggle-max"></div>
             </div>
             <div class="price-controls">
-              <label class="min-price">от <input name="min-price" type="text" value="0"></label>
-              <label class="max-price">до <input name="max-price" type="text" value="15000"></label>
+              <label class="min-price">от<input name="min-price" type="text" value="0"></label>
+              <label class="max-price">до<input name="max-price" type="text" value="15000"></label>
             </div>
           </div>
         </fieldset>
@@ -73,11 +73,11 @@
             </li>
             <li class="filter-feature">
               <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="features-block" value="features-block" id="filter-features">
-              <label for="filter-features">  Блок преимуществ</label>
+              <label for="filter-features">Блок преимуществ</label>
             </li>
             <li class="filter-feature">
               <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="news" value="news" id="filter-news">
-              <label for="filter-news"> Новости</label>
+              <label for="filter-news">Новости</label>
             </li>
             <li class="filter-feature">
               <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="gallery" value="gallery" id="filter-gallery">
@@ -89,10 +89,10 @@
             </li>
           </ul>
         </fieldset>
-        <button class="button filter-button" type="submit">Показать</button>
+        <button class="button" type="submit">Показать</button>
       </form>
 
-      <div class="right-column">
+      <div class="catalog-content">
         <div class="catalog-sorting">
           <b class="sorting-title">Сортировать:</b>
           <ul class="sorting-type">
@@ -120,7 +120,7 @@
               <img src="img/img-sedona.jpg" width="360" height="576" alt="Дизайн информационного сайта для туристов Sedona">
               <div class="catalog-item-hidden sedona">
                 <h3 class="item-title"><a href="#">Sedona</a></h3>
-                <p>Информационный&nbsp;сайт для&nbsp;туристов</p>
+                <p>Информационный сайт для туристов</p>
                 <a class="button catalog-item-price" href="#">9 990 руб.</a>
               </div>
             </article>
@@ -182,17 +182,18 @@
            </li>
         </ul>
 
-        <ul class="pagination-list">
-          <li class="pagination-item current-page"><a>1</a><li>
-          <li class="pagination-item"><a href="#">2</a><li>
-          <li class="pagination-item"><a href="#">3</a><li>
-          <li class="pagination-item next-page"><a href="#">Следующая</a><li>
-        </ul>
+        <nav aria-label="Навигация по каталогу">
+          <ul class="pagination-list">
+            <li class="pagination-item current-page"><a>1</a><li>
+            <li class="pagination-item"><a href="#">2</a><li>
+            <li class="pagination-item"><a href="#">3</a><li>
+            <li class="pagination-item next-page"><a href="#">Следующая</a><li>
+          </ul>
+        </nav>
       </div>
     </main>
 
     <footer class="inner-footer">
-
       <div class="find-us">
         <div class="container">
           <section class="contacts">
@@ -204,6 +205,7 @@
           </section>
         </div>
         <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.9827661109448!2d30.32244689088904!3d59.93883474027493!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sua!4v1536066253459"></iframe>
+        <img src="img/map-with-marker.jpg" width="1440" height="416" alt="Карта офиса по адресу ул. Б. Конюшенная, д. 19/8">
       </div>
       <div class="container">
         <div class="footer-social">
