--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <header class="main-header">
       <div class="container">
         <nav class="main-navigation" aria-label="Навигация по сайту">
-          <a class="main-logo"><!-- Убрала href -->
-            <img src="img/main-logo.svg" width="160"  height="65" alt="Логотип дизайн-студии Nerds">
+          <a class="main-logo">
+            <img src="img/main-logo.svg" width="160" height="65" alt="Логотип дизайн-студии Nerds">
           </a>
           <ul class="site-navigation">
             <li><a href="#">Студия</a></li>
@@ -22,7 +22,6 @@
             <li><a href="catalog.html">Магазин</a></li>
             <li><a href="#">Контакты</a></li>
           </ul>
-
           <a class="cart-link" href="#">Корзина</a>
         </nav>
       </div>
@@ -32,9 +31,9 @@
       <div class="container">
         <h2 class="visually-hidden">Преимущества</h2>
         <ul class="slider-controls">
-          <li><a class="active-slide" href="#slide-1"><span class="visually-hidden"> Слайд 1</span></a></li>
-          <li><a href="#slide-2"><span class="visually-hidden"> Слайд 2</span></a></li>
-          <li><a href="#slide-3"><span class="visually-hidden"> Слайд 3</span></a></li>
+          <li><a class="active-slide" href="#slide-1"><span class="visually-hidden">Слайд 1</span></a></li>
+          <li><a href="#slide-2"><span class="visually-hidden">Слайд 2</span></a></li>
+          <li><a href="#slide-3"><span class="visually-hidden">Слайд 3</span></a></li>
         </ul>
         <ul class="slider-list">
           <li class="slider-item slide-1" id="slide-1">
@@ -57,7 +56,7 @@
     </section>
 
     <main class="container">
-      <h1 class="visually-hidden"> Дизайн-студия «Nerds»</h1>
+      <h1 class="visually-hidden">Дизайн-студия «Nerds»</h1>
       <section class="services">
         <h2 class="visually-hidden">Услуги</h2>
         <ul class="services-list">
@@ -87,29 +86,24 @@
 
       <section class="about">
         <h2 class="visually-hidden">О нас</h2>
-        <div class="columns">
-          <div class="column-left">
-            <div class="about-info">
-              <p class="about-lead">
-                <b>Мы — маленькая, но гордая дизайн-студия из Краснодара. </b>
-              </p>
-              <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
-            </div>
-            <div class="features">
-              <p>
-                <b> Выполняем заказы на разработку:</b>
-              </p>
-              <ul class="features-list">
-                <li>Веб-сайтов любой сложности</li>
-                <li>Мобильных приложений для iOS и Android</li>
-                <li>Слайдшоу и видео для корпоративных презентаций</li>
-              </ul>
-            </div>
+        <div class="about-parts">
+          <div class="about-info">
+            <p class="about-lead">
+              <b>Мы — маленькая, но гордая дизайн-студия из Краснодара.</b>
+            </p>
+            <p class="about-text">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+            <p class="features-lead">
+              <b>Выполняем заказы на разработку:</b>
+            </p>
+            <ul class="features-list">
+              <li>Веб-сайтов любой сложности</li>
+              <li>Мобильных приложений для iOS и Android</li>
+              <li>Слайдшоу и видео для корпоративных презентаций</li>
+            </ul>
           </div>
 
-          <div class="advantages">
+          <div class="about-advantages">
             <img class="about-logo" src="img/nerds-illustration-logo.png" width="360" height="208" alt="Дизайн-студия Nerds">
-
             <table class="advantages-table">
               <caption>C 2004 года любим точность во всем:</caption>
               <tr class="advantages-percents">
@@ -138,7 +132,6 @@
     </main>
 
     <footer class="main-footer">
-
       <div class="find-us">
         <div class="container">
           <section class="contacts">
@@ -150,6 +143,7 @@
           </section>
         </div>
         <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.9827661109448!2d30.32244689088904!3d59.93883474027493!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sua!4v1536066253459"></iframe>
+        <img src="img/map-with-marker.jpg" width="1440" height="416" alt="Карта офиса по адресу ул. Б. Конюшенная, д. 19/8">
       </div>
 
       <div class="container">
