--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
       <div class="container">
         <h2 class="visually-hidden">Преимущества</h2>
         <ul class="slider-controls">
-          <li><a class="active-slide" href="#slide-1"><span class="visually-hidden">Слайд 1</span></a></li>
-          <li><a href="#slide-2"><span class="visually-hidden">Слайд 2</span></a></li>
-          <li><a href="#slide-3"><span class="visually-hidden">Слайд 3</span></a></li>
+          <li><a class="active-slide slider-control" href="#slide-1"><span class="visually-hidden">Слайд 1</span></a></li>
+          <li><a class="slider-control" href="#slide-2"><span class="visually-hidden">Слайд 2</span></a></li>
+          <li><a class="slider-control" href="#slide-3"><span class="visually-hidden">Слайд 3</span></a></li>
         </ul>
         <ul class="slider-list">
-          <li class="slider-item slide-1" id="slide-1">
+          <li class="slider-item slide-1 active-slide" id="slide-1">
             <p class="slide-title"><b>Долго, дорого,<br>скрупулезно.</b></p>
             <p class="slide-info">Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
             <a class="button" href="#">Узнать больше</a>
